--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-122864868-1');
 </script>
-
 <!--each table should be a sequence of progressions...-->
 <style>
 #logo {
@@ -103,12 +101,12 @@ body {
 		<a class="navbar-brand" href="#">Home</a>
 	</div>
 	<ul class="nav navbar-nav">
-		<li class="active"><a href="#p0">Basic Workout</a></li>
+		<li class="active"><a href="#p0">Suggested Plan</a></li>
 		<li><a href="#p1">Chest</a></li>
 		<li><a href="#p2">Back</a></li>
 		<li><a href="#p3">Arms</a></li>
 		<li><a href="#p4">Legs</a></li>	
-		<li><a href="#p5">Reps + Sets</a></li>	
+		<li><a href="#p5">Customizing</a></li>	
 		<li><a href="#p6">About Me</a></li>	
 	</ul>
 </nav>
@@ -131,7 +129,7 @@ body {
         		<a href="#p0">
             	<img src="ropeclimb2.jpg" class="img-responsive bodyarea">
             	</a>
-            	<div class="centered"><h3>Basic Workout</h3></div> 
+            	<div class="centered"><h3>Suggested Plan</h3></div> 
         </div>
         </div>
             
@@ -180,7 +178,7 @@ body {
 				<a href="#p5">
             	<img src="plan1.jpg" class="img-responsive bodyarea">
             	</a>        
-            	<div class="centered"><h3>Reps + Sets</h3></div>
+            	<div class="centered"><h3>Customizing</h3></div>
 		</div>
    		</div>
 	</div>
@@ -192,13 +190,13 @@ body {
 <!--Links  -->
   <h2>Hello! </h2>
   <p>Are you new to climbing but trying to get a fast start or an experienced one trying to get to the next level?  
-  If you are, these exercises will help you meet your goals by challenging you in fundamental and unfamiliar ways. 
+  If you are, these exercises will help you meet your goals by challenging you in fundamental ways. 
   </br>
   </br>
   <button data-toggle="collapse" data-target="#myCollapsible5" class="btn btn-primary">Show/Hide Exercise Themes</button>
     <div id="myCollapsible5" class="collapse"> 
   There are a few common characteristics of the exercises I have included: </p>
-  <p> <span class="bold">Bodyweight Only:</span> Being able to manipulate your body is one of the most important aspects of climbing and because this is already
+  <p> <span class="bold">Bodyweight:</span> Being able to manipulate your body is one of the most important aspects of climbing and because this is already
   very challenging, added weight is usually unnecessary. </p>
   <p>
   <span class="bold">Free-weight:</span> Being able to manage mobile weight focuses your core and saves time by working out multiple muscles at once. As a result of this, however, proper form is very important.
@@ -211,67 +209,76 @@ body {
 </div>
 
 <div class="container" id="p0">
-<div class="page-header"> 
-	<h1 class="bg-info"> Basic Workout </h1>
+    <div class="page-header"> 
+	<h1 class="bg-info"> Suggested Plan </h1>
 	</div>
-  <table class = "table table-striped">
-    <thead>
-      <tr>
-        <th>Exercise</th>
-        <th>Difficulty</th>
-        <th>Muscles</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Ring Dip Hold</td>
-        <td>Easy</td>
-        <td>Triceps, Shoulders</td>
-      </tr>
-      <tr>
-        <td>Ring Push-ups</td>
-        <td>Easy</td>
-        <td>Triceps, Pecs</td>
-      </tr>
-      <tr>
-        <td>X Push-ups</td>
-        <td>Easy</td>
-        <td>Anterior</td>
-      </tr>
-       <tr>
-        <td>Leg-ups</td>
-        <td>Easy</td>
-        <td>Lower Abs</td>
-      </tr>
-       <tr>
-        <td>Pull-ups</td>
-        <td>Easy</td>
-        <td>Triceps, Lats</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="container">
-  <button data-toggle="collapse" data-target="#myCollapsible" class="btn btn-warning">Show/Hide Details</button>
-    <div id="myCollapsible" class="collapse">
-  	<p>If you would like a simple workout to boost overall ability, these exercises are for you.
-  	</br><span class="bold">Ring Dip Hold </span> By doing these, you can calibrate yourself and feel out where to center your weight between the rings.  Start with a set of gymnastics rings shoulder-width apart and at waist height. 
-  	Stand between the rings and push down on them hard. 
-  	Once this engages your muscles, jump off the ground and hold yourself up in this mantling position 
-  	(similar to movement you use when getting out of a pool via the side).
-	  <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/iODfBpAI2hc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  	</br><span class="bold">Ring Push-ups:</span> With the rings shoulder-width apart and a few inches off the ground, get into a push-up position with the ring openings facing towards you.
-  	Perform push-ups as you normally would, with your hands moving further apart as you go down.
-	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/7enjS7Y2LYc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  	</br><span class="bold">X Push-ups: </span>These are almost a total-body exercise.  Assume a normal push-up position with your legs and arms spread wider than your shoulders.  
-  	Your arms should also be higher than shoulder height. Perform push-ups as you normally would. 
-	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/IOQjVhXOEeo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  	</br><span class="bold">Leg-ups: </span> Leg-ups will help your feet on roofs. Lie on the ground with your back touching it.  Lift your legs up and above your head.
-  	Make sure to keep your lower back on the ground and visualize pulling your feet towards your head instead of flipping them over your waist.
-  	<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/HdI4Xwm3RNw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	</br><span class="bold">Pull-ups: </span>One would be remiss to not advise these.
-  	</p>
-  	</div>
-  </div>
+<p>
+Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
+ </br>
+1. Vertical Pushing Progression </br>
+Dips - 5 reps * 5 sets</br>
+Ring hold - 5 seconds <a href = "https://www.youtube.com/watch?v=iODfBpAI2hc">Demo</a></br>
+Weighted Dips - 5 reps * 5 sets</br>
+Ring Dips - 5 reps * 5 sets</br>
+ </br>
+2. Horizontal Pushing Progression</br>
+Push-ups - 10 reps * 3 sets</br>
+X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo</a> </br>
+Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo</a></br>
+Ring Flies (on knees) - 5 reps * 5 sets</br>
+Ring Flies - 5 reps * 5 sets</br>
+Pseudo-Planche Push-ups - 5 reps * 5 sets</br>
+ </br>
+3. Lower Abs Progression</br>
+Leg Raises - 10 reps * 3 sets</br>
+V-ups - 10 reps * 3 sets</br>
+Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=HdI4Xwm3RNw">Demo</a> </br>
+ </br>
+4. Upper Abs Progression</br>
+Plank - 90 seconds</br>
+Crunches - 40 reps * 1 set</br>
+Superman Flies (on knees) - 5 reps * 5 sets</br>
+Ab Wheel Rollouts - 5 reps * 5 sets</br>
+Superman Flies (one arm) - 5 reps * 5 sets</br>
+Superman Flies - 5 reps * 5 sets</br>
+ </br>
+5. Twisting Progression</br>
+Side planks - 90 seconds</br>
+Side Crunches - 40 reps * 1 set</br>
+Thread the Needle- 5 reps * 5 sets</br>
+Russian Twists- 10 reps * 3 sets</br>
+Windshield Wipers (ground) - 5 reps * 5 sets</br>
+Windshield Wipers (on bar) - 5 reps * 5 sets</br>
+ </br>
+6. Lever Progression</br>
+Scapular Pull-ups (tucked) - 5 reps * 5 sets</br>
+Scapular Pull-ups (one leg out)- 5 reps * 5 sets</br>
+Front Lever (straddle)- 5 reps * 5 sets</br>
+Front Lever- 5 seconds</br>
+ </br>
+7. Rowing Progression</br>
+Inverted Ring Rows (leaning)- 5 reps * 5 sets</br>
+Inverted Ring Rows (one arm)- 5 reps * 5 sets</br>
+Inverted Ring Rows (legs propped up)- 5 reps * 5 sets</br>
+Inverted Ring Rows (hanging)- 5 reps * 5 sets</br>
+ </br>
+8. Pulling Progression</br>
+Assisted Pull-ups- 5 reps * 5 sets</br>
+Pull-ups- 5 reps * 5 sets</br>
+One Arm Bar Hold- 30 seconds</br>
+Shoulder Pull-ups (One Arm)- 5 reps * 5 sets</br>
+Weighted Pull-ups- 5 reps * 5 sets</br>
+Archer Pull-ups- 5 reps * 5 sets</br>
+Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rupsLCg">Demo</a></br>
+One-Arm Pull-ups- 5 reps * 5 sets</br>
+Weighted One-Arm Pull-ups- 5 reps * 5 sets</br>
+</br>
+9. Pulling with Power Progression </br>
+Wide-set Pull-ups- 5 reps * 5 sets</br>
+Bar to Chest- 5 reps * 5 sets</br>
+Muscle-ups- 5 reps * 5 sets</br>
+
+</p>
 </div>
  
 
@@ -309,7 +316,7 @@ body {
         <td>Abs, Lats</td>
       </tr>
       <tr>
-        <td>Pseudo Planche Push-ups</td>
+        <td>Planche Push-ups</td>
         <td>Medium</td>
         <td>Triceps, Pecs</td>
       </tr>
@@ -345,8 +352,7 @@ body {
   In this way, they stay roughly shoulder-width apart as you go down. This will target your abs more than the normal Flies.
   </br><span class="bold">Ring Dips: </span>These are much harder than normal dips and it is recommended you flare the rings out each time you reach the top of the movement.
   </br><span class="bold">Dragon Flags: </span>Dragon Flags are extremely difficult so one should work up to them using leg-ups and negatives.
-  </br><span class="bold">Pseudo Planche Push-ups: </span>This an easily-adjustable gymnastics exercise that builds pushing power.
-<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/NU2MB0Fl2UI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </br><span class="bold">Planche Push-ups: </span>This an easily-adjustable gymnastics exercise that builds pushing power.
   </p>
   </div>
   </div>
@@ -446,7 +452,11 @@ body {
         <td>Medium</td>
         <td>Triceps</td>
       </tr>
-    
+      <tr>
+        <td>Muscle-ups</td>
+        <td>Medium</td>
+        <td>Triceps</td>
+      </tr>
       <tr>
         <td>Weight Ring Hold</td>
         <td>Medium</td>
@@ -457,23 +467,13 @@ body {
         <td>Medium</td>
         <td>Hands</td>
       </tr>
-	   <tr>
-        <td>Partner Pull-ups</td>
-        <td>Medium</td>
-        <td>Triceps</td>
-      </tr>
     </tbody>
   </table>
   <button data-toggle="collapse" data-target="#myCollapsible3" class="btn btn-warning">Show/Hide Details</button>
     <div id="myCollapsible3" class="collapse">
   <p>
   <span class="bold">Type-writers: </span> While lock-off strength is important it is debatable whether simply doing it is the best way of improving it.
- <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/fTP7rupsLCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-	  <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/GTb8KALJl4E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-	</br><span class="bold">Bar to Chest: </span> These are pull-ups that are dynamic and build explosive power.
-	</br><span class="bold">Partner Pull-ups: </span> These are pull-ups that are dynamic and build explosive power.
+  </br><span class="bold">Bar to Chest: </span> These are pull-ups that are dynamic and build explosive power.
   </br><span class="bold">One-arm Pull-up: </span> While difficult, make sure you squeeze the bar as hard as you can, start with your body perpendicular to the bar, and fold your body inwards.
   </p>
 
@@ -569,19 +569,19 @@ body {
   </div>
 
 <div class='container' id="p5">
-	<div class="page-header"> <h1> Reps + Sets </h1></div>
+	<div class="page-header"> <h1> Customizing </h1></div>
 
-  <h3> Form a plan! Pick 2-3 exercises under each of the following headers and do them 3-4 times a week.  
-  You should stick to these for at least ~6 weeks to see results instead of attempting "muscle confusion". </h3>
-  <p class="well">If training power, complete ~5 sets each with ~5 reps. 
-  Take up to ~3 minutes rest between sets.  You can take more or less time as long as you feel fully recovered before starting new sets.  
+  <h3> So you want to form your own plan? Great idea! Pick 2-3 exercises under each of the following headers and do them 3-4 times a week.  
+  You should stick to these for at least 6 weeks to see results.  Try not to cause "muscle confusion". </h3>
+  <p class="well">If training power, complete 5 sets each with 5 reps. 
+  Take up to 3 minutes rest between sets.  You can take more or less time as long as you feel fully recovered before starting new sets.  
   During the following week, you should try to add 1 more rep to each set.  
-  Then, once you can do 7-10 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to ~5 reps/set. </p> 
-  <p class="well">If training endurance, complete ~3 sets each with 10 reps. Take .5-1 minute rest between sets. 
+  Then, once you can do 7-10 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to 5 reps/set. </p> 
+  <p class="well">If training endurance, complete 3 sets each with 10 reps. Take .5-1 minute rest between sets. 
   You want to take shorter rests so that you work out your muscles to exhaustion.  
   Also, you should do as many reps as you are able in the final set. 
   During the following week, you should try to add 1 more rep to each set.  
-  Then, once you can do 15-20 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to ~10 reps/set</p> 
+  Then, once you can do 15-20 reps per set, you would need to add ~5% more weight (factoring bodyweight) and reset to 10 reps/set</p> 
   <p>Don't overexert yourself. This goes without saying but there are a lot of options at your disposal you're feeling overworked:
   	</br>Reduce weight
   	</br>Switch to a different variation of the exercise
@@ -600,53 +600,12 @@ body {
 </div>
 
 
-<div class="container">
-<h2>Useful Links</h2>
-<p>
-<a href="https://www.trainingbeta.com/">Training Beta - interviews with professional climbers + industry experts, diverse myriad of info including topics like diet + yoga </a>
-</p>
-<p >
-<a href="https://www.youtube.com/channel/UCvkGOw5JmJ3TPdXNiEFwq6Q">Mani the Monkey - ideas for climbing training + nutrition </a>
-</p>
-<p >
-<a href="https://www.youtube.com/user/TheMiamiTrainer">THENX - calisthenics for improving dynamic movement</a>
-</p>
-<p>
-<a href="http://trainingforclimbing.com/">Eric Horst - author of many climbing training books</a>
-</p>
-<p>
-<a href="https://rockclimberstrainingmanual.com/about-us/">Anderson Brothers - training book</a>
-</p>
-<p>
-<a href="http://en-eva-lopez.blogspot.com/">Eva Lopez - research on finger + grip strength</a>
-</p>
-<p>
-<a href="https://www.youtube.com/watch?v=sWjTnBmCHTY">8 Minute Abs - approachable, challenging ab workout</a>
-</p>
-<p>
-<a href="https://www.youtube.com/user/JDCav24">Athlean - large collection of general gym workouts</a>
-</p>
-<p>
-<a href="https://www.youtube.com/channel/UCPx2nKfFk4p6IkQsMW9O0xQ/featured">Vahva Fitness - ring workouts and animal walks for coordination</a>
-</p>
-<p>
-<a href="https://www.instagram.com/mccollsean/?hl=en">Sean McColl's Instagram - training inspiration</a>
-</p>
-<p>
-<a href="https://www.youtube.com/user/kaiwinbot">Ten Thousand Method - full, strong side splits in a few months </a>
-</p>
-<p>
-<a href="https://www.youtube.com/watch?v=KdKvBRSx0_A">Splits Routine</a>
-</p>
-</div>
-
-
 <div class='container' id="p6">
 	<div class="page-header"> 
 	<h1> Who Am I? </h1>
 	</div>
 	<p> Hey, my name is Robby! I started climbing in 2014 when I decided to take a Climbing PE class at my undergrad school, Cornell University, on a whim. 
-	Because I enjoyed climbing at  so much, I decided to continue climbing at a local gym where I have instructed many classes.  
+	Because I enjoyed climbing so much, I decided to continue climbing at a local gym where I have instructed many classes and have been pushing V9.  
 	I've incorporated all of these exercises into my routine at one point or another so I hope you find them useful too!
 	</p>
 </div>
@@ -663,4 +622,3 @@ rjk244@cornell.edu
 
 </body>
 </html>
-
