--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
 		<a class="navbar-brand" href="#">Home</a>
 	</div>
 	<ul class="nav navbar-nav">
-		<li class="active"><a href="#p0">Suggested Plan</a></li>
+		<li class="active"><a href="#p0">Suggested Workout</a></li>
 		<li><a href="#p1">Chest</a></li>
 		<li><a href="#p2">Back</a></li>
 		<li><a href="#p3">Arms</a></li>
@@ -129,7 +129,7 @@ body {
         		<a href="#p0">
             	<img src="ropeclimb2.jpg" class="img-responsive bodyarea">
             	</a>
-            	<div class="centered"><h3>Suggested Plan</h3></div> 
+            	<div class="centered"><h3>Suggested Workout</h3></div> 
         </div>
         </div>
             
@@ -210,7 +210,7 @@ body {
 
 <div class="container" id="p0">
     <div class="page-header"> 
-	<h1 class="bg-info"> Suggested Plan </h1>
+	<h1 class="bg-info"> Suggested Workout</h1>
 	</div>
 <p>
 Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
