--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@ body {
 Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  </br>
 1. Vertical Pushing Progression </br>
+Assisted Dips - 5 reps * 5 sets</br>
 Dips - 5 reps * 5 sets</br>
 Ring hold - 5 seconds <a href = "https://www.youtube.com/watch?v=iODfBpAI2hc">Demo</a></br>
 Weighted Dips - 5 reps * 5 sets</br>
@@ -251,6 +252,7 @@ Windshield Wipers (ground) - 5 reps * 5 sets</br>
 Windshield Wipers (on bar) - 5 reps * 5 sets</br>
  </br>
 6. Lever Progression</br>
+Scapular Shrugs - 5 reps * 5 sets</br>
 Scapular Pull-ups (tucked) - 5 reps * 5 sets</br>
 Scapular Pull-ups (one leg out)- 5 reps * 5 sets</br>
 Front Lever (straddle)- 5 reps * 5 sets</br>
