--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@ body {
 <div class="container" id="p0">
     <div class="page-header"> 
 	<h1 class="bg-info"> Suggested Workout</h1>
-	</div>
+</div>
+	<button data-toggle="collapse" data-target="#myCollapsible1" class="btn btn-warning">Show/Hide Details</button>
+    <div id="myCollapsible0" class="collapse">  
 <p>
 Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  </br>
@@ -281,6 +283,7 @@ Bar to Chest- 5 reps * 5 sets</br>
 Muscle-ups- 5 reps * 5 sets</br>
 
 </p>
+</div>
 </div>
  
 
