--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ body {
     <div class="page-header"> 
 	<h1 class="bg-info"> Suggested Workout</h1>
 </div>
-	<button data-toggle="collapse" data-target="#myCollapsible1" class="btn btn-warning">Show/Hide Details</button>
+	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
     <div id="myCollapsible0" class="collapse">  
 <p>
 Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
