--- a/index.html
+++ b/index.html
@@ -212,8 +212,9 @@ body {
     <div class="page-header"> 
 	<h1 class="bg-info"> Suggested Workout</h1>
 </div>
+	<!--
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
-    <div id="myCollapsible0" class="collapse">  
+    <div id="myCollapsible0" class="collapse">  -->
 <p>
 Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  </br>
@@ -283,7 +284,7 @@ Bar to Chest- 5 reps * 5 sets</br>
 Muscle-ups- 5 reps * 5 sets</br>
 
 </p>
-</div>
+<!-- </div> -->
 </div>
  
 
