--- a/index.html
+++ b/index.html
@@ -116,12 +116,11 @@ body {
   <div class="container" style="display: flex;
     justify-content: center;
     align-items: center;">
-  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> TAK TRAINING </h1> 
+  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> TAK TRAINING </h1> <img src="untitled.jpg" class="img-responsive">
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
-
-
+	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
     	<div class="col-sm-4">
