--- a/index.html
+++ b/index.html
@@ -112,13 +112,12 @@ body {
 </nav>
 </div>
 
-<img src="untitled.jpg" class="img-responsive">	
 	
 <div class="jumbotron">
   <div class="container" style="display: flex;
     justify-content: center;
     align-items: center;">
-  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> TAK TRAINING  </h1> 
+  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> TAK TRAINING  </h1> <img src="untitled.png" class="img-responsive">	
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
