--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@ body {
   <div class="container" style="display: flex;
     justify-content: center;
     align-items: center;">
-  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> TAK TRAINING  </h1> <img src="untitled.png" class="img-responsive">	
+  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> CHALKWINGS TRAINING  </h1> 	
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
+
+	<img src="untitled.png" class="img-responsive centered">
 	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
