--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ body {
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
-
+<div class ="container">
 	<img src="untitled.png" class="img-responsive centered">
-	
+	</div>	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
     	<div class="col-sm-4">
