--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body {
   </div>
 </div>
 	<div class ="container">
-	<img src="untitled.png" class="centered">
+	<img src="untitled.png" class="center">
 	</div>
 	
 <div class="container" style="margin-bottom: 30px">
@@ -210,6 +210,7 @@ body {
   </p>
   
 </div>
+
 
 <div class="container" id="p0">
     <div class="page-header"> 
