--- a/index.html
+++ b/index.html
@@ -220,8 +220,63 @@ body {
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
     <div id="myCollapsible0" class="collapse">  -->
 <p>
-Progressions! Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
- </br>
+	<h2>Finger Strength Exercises</h2>
+</br>
+</br><h3>Hangboard</h3>
+</br>
+</br>Variation 1: Repeaters 
+</br>Choose a pair of edges that are 10-15mm and can hold all four fingers.  Using an open-crimp position, hang off the edges for 7 seconds then rest for 3 seconds.  Repeat this 5 more times for a total of 6 hangs.
+</br>
+</br>Variation 2:
+</br>Do hangboard Repeaters using different pockets and edges
+</br>
+</br>Variation 3: 
+</br>Do hangboard Repeaters using less fingers
+</br>
+</br>Variation 4: Max Hangs
+</br>Choose a pair of edges that are 10-15mm and can hold all four fingers.  Attach weight to yourself using a harness or weight vest.
+</br>Using an open-crimp position, hang off the edges for at least 5 seconds then rest for at least 5 mins.  Repeat this 4 more times for a total of 5 hangs.
+</br>
+</br>Variation 5: One Arm Hangs
+</br>Choose a pair of edges that are 10-15mm and can hold all four fingers. Use a pulley system to provide a counter weight so you are lighter.
+</br>Using an open-crimp position, hang off the edges for at least 5 seconds then rest for at least 5 mins.  Repeat this 4 more times for a total of 5 hangs.
+</br>
+</br><h3>Campus Board</h3> 
+</br>
+</br>Variation 1: 
+</br>Using an open-crimp position, go up the campus board using every rung and match on each before going up to the next one.
+</br>
+</br>Variation 2: 
+</br>Variation 1 without matching rungs.
+</br>
+</br>Variation 3:
+</br>Variation 1 while skipping rungs.
+</br>
+</br>Variation 4: Dynoing
+</br>With both hands on the bottom rung. reach up to the highest rung you can.
+</br>
+</br>Variation 5: 
+</br>Do Variation 4 then reach as high as you can with you’re other hand.
+</br>
+</br>Variation 6: Bumping
+</br>With both hands on the bottom rung, move one hand up to the next rung, then the next rung, etc until you cannot go further.
+</br>
+</br>Variation 7: Alternating
+</br>With both hands on the bottom rung, move one hand up to a higher rung then bring it back down to the bottom rung and repeat.  Adjust difficulty by adding reps and reaching higher.
+</br>
+</br>Variation 8: Downclimbing
+</br>Do Variation 1 then down climb using every rung.
+</br>
+</br>Variation 9: Swapping
+</br>Not advised for beginners.  With hands on different rungs, simultaneously swap which rungs they’re on and repeat.
+</br>
+</br>Variation 10: Double clutching
+</br>Not advised for beginners. With both hands on the bottom rung, simultaneously reach up for a higher one using both hands.</br>
+</br>
+<h2>Progressions! </h2>
+</br>Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
+ 
+</br>
 1. Vertical Pushing Progression </br>
 Assisted Dips - 5 reps * 5 sets</br>
 Dips - 5 reps * 5 sets</br>
