--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body {
 </br>
 </br><h3>Hangboard</h3>
 </br>
-</br>Variation 1: Repeaters 
+</br>Variation 1: Repeaters <a href = "https://www.youtube.com/watch?v=8YTn7qEpxtU">Demo</a> </br>
 </br>Choose a pair of edges that are 10-15mm and can hold all four fingers.  Using an open-crimp position, hang off the edges for 7 seconds then rest for 3 seconds.  Repeat this 5 more times for a total of 6 hangs.
 </br>
 </br>Variation 2:
@@ -258,10 +258,10 @@ body {
 </br>Variation 5: 
 </br>Do Variation 4 then reach as high as you can with you’re other hand.
 </br>
-</br>Variation 6: Bumping
+</br>Variation 6: Bumping <a href = "https://www.youtube.com/watch?v=xLPdz0n5hkE">Demo</a> 
 </br>With both hands on the bottom rung, move one hand up to the next rung, then the next rung, etc until you cannot go further.
 </br>
-</br>Variation 7: Alternating
+</br>Variation 7: Alternating <a href = "https://www.youtube.com/watch?v=RhAutTnvAgQ">Demo</a> 
 </br>With both hands on the bottom rung, move one hand up to a higher rung then bring it back down to the bottom rung and repeat.  Adjust difficulty by adding reps and reaching higher.
 </br>
 </br>Variation 8: Downclimbing
@@ -278,61 +278,71 @@ body {
  
 </br>
 1. Vertical Pushing Progression </br>
+Band pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=1xEizoLOqmA">Demo</a> </br>
 Assisted Dips - 5 reps * 5 sets</br>
 Dips - 5 reps * 5 sets</br>
 Ring hold - 5 seconds <a href = "https://www.youtube.com/watch?v=iODfBpAI2hc">Demo</a></br>
 Weighted Dips - 5 reps * 5 sets</br>
-Ring Dips - 5 reps * 5 sets</br>
+Ring Dips - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CONXdUoBzdI">Demo</a> </br>
+Half Cross - 10 seconds * 3 sets <a href = "https://www.youtube.com/watch?v=vK8LxtyKZf0">Demo</a> </br>
+Strap Cross - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=vH1w7DQhafc">Demo</a> </br>
  </br>
 2. Horizontal Pushing Progression</br>
 Push-ups - 10 reps * 3 sets</br>
 X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo</a> </br>
 Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo</a></br>
-Ring Flies (on knees) - 5 reps * 5 sets</br>
-Ring Flies - 5 reps * 5 sets</br>
-Pseudo-Planche Push-ups - 5 reps * 5 sets</br>
+Ring Flies (on knees, feet up) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svLqaM6-snQ">Demo</a> </br>
+Ring Flies (on knees, feet down) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=sMB6GrrRX2Y">Demo</a> </br>
+Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Q1hgPfcooGc">Demo</a> </br>
+Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-IWCw">Demo</a> </br>
+Raised Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=PNo7ZEUtOms">Demo</a> </br>
+
  </br>
 3. Lower Abs Progression</br>
-Leg Raises - 10 reps * 3 sets</br>
+Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-IWCw">Demo</a> </br>
 V-ups - 10 reps * 3 sets</br>
-Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=HdI4Xwm3RNw">Demo</a> </br>
+Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=g2R_Y9rE0Hg">Demo</a> </br>
+Toes to Bar - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=X4n7GKTQhwg">Demo</a> </br> 
+Dragon Flag - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=gub2VJbEF-c">Demo</a> </br>
  </br>
 4. Upper Abs Progression</br>
 Plank - 90 seconds</br>
 Crunches - 40 reps * 1 set</br>
 Superman Flies (on knees) - 5 reps * 5 sets</br>
 Ab Wheel Rollouts - 5 reps * 5 sets</br>
-Superman Flies (one arm) - 5 reps * 5 sets</br>
-Superman Flies - 5 reps * 5 sets</br>
+Knee Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hZFOcyaL_ds">Demo</a> </br>
+Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYITo">Demo</a> </br>
+Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVI9A">Demo</a> </br>
  </br>
 5. Twisting Progression</br>
 Side planks - 90 seconds</br>
-Side Crunches - 40 reps * 1 set</br>
-Thread the Needle- 5 reps * 5 sets</br>
-Russian Twists- 10 reps * 3 sets</br>
-Windshield Wipers (ground) - 5 reps * 5 sets</br>
-Windshield Wipers (on bar) - 5 reps * 5 sets</br>
- </br>
+Side Crunches - 40 reps * 1 set <a href = "https://www.youtube.com/watch?v=E3pHxKVfsz0">Demo</a> </br>
+Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXylJAg8LFU">Demo</a> </br>
+Russian Twists- 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=jIStaPoxupI">Demo</a> </br>
+Windshield Wipers (ground) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hrS3QsNqvTQ">Demo</a>  </br>
+Windshield Wipers (tucked, on bar) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=xM5ojvBKI94">Demo</a></br> 
+Windshield Wipers (extended, on bar) - 3 reps * 5 sets <a href = "https://www.youtube.com/watch?v=cQPehma273s">Demo</a> </br>
+</br>
 6. Lever Progression</br>
 Scapular Shrugs - 5 reps * 5 sets</br>
-Scapular Pull-ups (tucked) - 5 reps * 5 sets</br>
-Scapular Pull-ups (one leg out)- 5 reps * 5 sets</br>
-Front Lever (straddle)- 5 reps * 5 sets</br>
+Scapular Pull-ups (tucked) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Demo</a> </br>
+Assisted Lever Pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=q5hXGcAETFM">Demo</a> </br>
+Scapular Pull-ups (one leg out or straddle)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=zymHuZDnD5U">Demo</a> </br>
 Front Lever- 5 seconds</br>
  </br>
 7. Rowing Progression</br>
-Inverted Ring Rows (leaning)- 5 reps * 5 sets</br>
-Inverted Ring Rows (one arm)- 5 reps * 5 sets</br>
-Inverted Ring Rows (legs propped up)- 5 reps * 5 sets</br>
-Inverted Ring Rows (hanging)- 5 reps * 5 sets</br>
+Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo</a> </br>
+Inverted Ring Rows (one arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=C3F4ltRbDOE">Demo</a> </br>
+Inverted Ring Rows (legs propped up)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Demo</a>  </br>
+Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMIqx9aOk">Demo</a> </br>
  </br>
 8. Pulling Progression</br>
 Assisted Pull-ups- 5 reps * 5 sets</br>
 Pull-ups- 5 reps * 5 sets</br>
 One Arm Bar Hold- 30 seconds</br>
-Shoulder Pull-ups (One Arm)- 5 reps * 5 sets</br>
+Shoulder Pull-ups (One Arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=MjawoDfKqf0">Demo</a> </br>
 Weighted Pull-ups- 5 reps * 5 sets</br>
-Archer Pull-ups- 5 reps * 5 sets</br>
+Archer Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=P-jeGDxcQZY">Demo</a>  </br>
 Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rupsLCg">Demo</a></br>
 One-Arm Pull-ups- 5 reps * 5 sets</br>
 Weighted One-Arm Pull-ups- 5 reps * 5 sets</br>
