--- a/index.html
+++ b/index.html
@@ -291,15 +291,15 @@ Strap Cross - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=vH1w7DQ
 Push-ups - 10 reps * 3 sets</br>
 X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo</a> </br>
 Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo</a></br>
-Ring Flies (on knees, feet up) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svLqaM6-snQ">Demo</a> </br>
+Ring Flies (on knees, feet up) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svLqaM6-cnQ">Demo</a> </br>
 Ring Flies (on knees, feet down) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=sMB6GrrRX2Y">Demo</a> </br>
 Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Q1hgPfcooGc">Demo</a> </br>
-Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-IWCw">Demo</a> </br>
+Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CVUM4BKIbf8">Demo</a> </br>
 Raised Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=PNo7ZEUtOms">Demo</a> </br>
 
  </br>
 3. Lower Abs Progression</br>
-Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-IWCw">Demo</a> </br>
+Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-lWCw">Demo</a> </br>
 V-ups - 10 reps * 3 sets</br>
 Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=g2R_Y9rE0Hg">Demo</a> </br>
 Toes to Bar - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=X4n7GKTQhwg">Demo</a> </br> 
@@ -311,13 +311,13 @@ Crunches - 40 reps * 1 set</br>
 Superman Flies (on knees) - 5 reps * 5 sets</br>
 Ab Wheel Rollouts - 5 reps * 5 sets</br>
 Knee Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hZFOcyaL_ds">Demo</a> </br>
-Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYITo">Demo</a> </br>
-Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVI9A">Demo</a> </br>
+Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYlTo">Demo</a> </br>
+Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVl9A">Demo</a> </br>
  </br>
 5. Twisting Progression</br>
 Side planks - 90 seconds</br>
 Side Crunches - 40 reps * 1 set <a href = "https://www.youtube.com/watch?v=E3pHxKVfsz0">Demo</a> </br>
-Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXylJAg8LFU">Demo</a> </br>
+Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXyIJAg8LFU">Demo</a> </br>
 Russian Twists- 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=jIStaPoxupI">Demo</a> </br>
 Windshield Wipers (ground) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hrS3QsNqvTQ">Demo</a>  </br>
 Windshield Wipers (tucked, on bar) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=xM5ojvBKI94">Demo</a></br> 
@@ -334,7 +334,7 @@ Front Lever- 5 seconds</br>
 Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo</a> </br>
 Inverted Ring Rows (one arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=C3F4ltRbDOE">Demo</a> </br>
 Inverted Ring Rows (legs propped up)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Demo</a>  </br>
-Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMIqx9aOk">Demo</a> </br>
+Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMlqx9aOk">Demo</a> </br>
  </br>
 8. Pulling Progression</br>
 Assisted Pull-ups- 5 reps * 5 sets</br>
