--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ body {
 </br>Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  
 </br>
-1. Vertical Pushing Progression </br>
+<h3>1. Dips and Iron Cross Prog.</h3> </br>
 Band pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=1xEizoLOqmA">Demo</a> </br>
 Assisted Dips - 5 reps * 5 sets</br>
 Dips - 5 reps * 5 sets</br>
@@ -287,7 +287,7 @@ Ring Dips - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CONXdUoBz
 Half Cross - 10 seconds * 3 sets <a href = "https://www.youtube.com/watch?v=vK8LxtyKZf0">Demo</a> </br>
 Strap Cross - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=vH1w7DQhafc">Demo</a> </br>
  </br>
-2. Horizontal Pushing Progression</br>
+<h3>2. Flies and Planche Prog.</h3></br>
 Push-ups - 10 reps * 3 sets</br>
 X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo</a> </br>
 Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo</a></br>
@@ -298,14 +298,14 @@ Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watc
 Raised Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=PNo7ZEUtOms">Demo</a> </br>
 
  </br>
-3. Lower Abs Progression</br>
+<h3>3. Dragon Flag Prog.</h3></br>
 Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-lWCw">Demo</a> </br>
 V-ups - 10 reps * 3 sets</br>
 Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=g2R_Y9rE0Hg">Demo</a> </br>
 Toes to Bar - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=X4n7GKTQhwg">Demo</a> </br> 
 Dragon Flag - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=gub2VJbEF-c">Demo</a> </br>
  </br>
-4. Upper Abs Progression</br>
+<h3>4. Superman Flies Prog.</h3></br>
 Plank - 90 seconds</br>
 Crunches - 40 reps * 1 set</br>
 Superman Flies (on knees) - 5 reps * 5 sets</br>
@@ -314,7 +314,7 @@ Knee Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v
 Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYlTo">Demo</a> </br>
 Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVl9A">Demo</a> </br>
  </br>
-5. Twisting Progression</br>
+<h3>5. Windshield Wiper Prog.</h3></br>
 Side planks - 90 seconds</br>
 Side Crunches - 40 reps * 1 set <a href = "https://www.youtube.com/watch?v=E3pHxKVfsz0">Demo</a> </br>
 Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXyIJAg8LFU">Demo</a> </br>
@@ -323,20 +323,20 @@ Windshield Wipers (ground) - 5 reps * 5 sets <a href = "https://www.youtube.com/
 Windshield Wipers (tucked, on bar) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=xM5ojvBKI94">Demo</a></br> 
 Windshield Wipers (extended, on bar) - 3 reps * 5 sets <a href = "https://www.youtube.com/watch?v=cQPehma273s">Demo</a> </br>
 </br>
-6. Lever Progression</br>
+<h3>6. Front Lever Prog.</h3></br>
 Scapular Shrugs - 5 reps * 5 sets</br>
 Scapular Pull-ups (tucked) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Demo</a> </br>
 Assisted Lever Pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=q5hXGcAETFM">Demo</a> </br>
 Scapular Pull-ups (one leg out or straddle)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=zymHuZDnD5U">Demo</a> </br>
 Front Lever- 5 seconds</br>
  </br>
-7. Rowing Progression</br>
+<h3>7. Inverted Row Prog.</h3></br>
 Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo</a> </br>
 Inverted Ring Rows (one arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=C3F4ltRbDOE">Demo</a> </br>
 Inverted Ring Rows (legs propped up)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Demo</a>  </br>
 Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMlqx9aOk">Demo</a> </br>
  </br>
-8. Pulling Progression</br>
+<h3>8. One Arm Pull-up Prog.</h3></br>
 Assisted Pull-ups- 5 reps * 5 sets</br>
 Pull-ups- 5 reps * 5 sets</br>
 One Arm Bar Hold- 30 seconds</br>
@@ -347,7 +347,7 @@ Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rups
 One-Arm Pull-ups- 5 reps * 5 sets</br>
 Weighted One-Arm Pull-ups- 5 reps * 5 sets</br>
 </br>
-9. Pulling with Power Progression </br>
+<h3>9. Muscle-up Prog.</h3> </br>
 Wide-set Pull-ups- 5 reps * 5 sets</br>
 Bar to Chest- 5 reps * 5 sets</br>
 Muscle-ups- 5 reps * 5 sets</br>
